--- a/CheckpointI Frontend3/src/styles.css
+++ b/CheckpointI Frontend3/src/styles.css
@@ -119,6 +119,7 @@ form{
 }
 
 #data-card{
+  text-align: right;
   font-family: 'Poppins';
   font-style: normal;
   font-weight: 300;
@@ -145,3 +146,4 @@ form{
   line-height: 24px;
   color: #343434;
 }
+
